<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/tab1_1">

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:backgroundTint="@color/blue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 任务标题 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notset"
            android:textSize="18sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <!-- 任务内容 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/task_content"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notset"
            android:textSize="18sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <!-- 附件 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/attachment"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/attachmentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="无"
            android:textSize="18sp"
            android:paddingStart="8dp" />
    </LinearLayout>

    <!-- 截止日期 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/dueDateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notset"
            android:textSize="18sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <!-- 重要性 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/importance"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/importanceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="普通"
            android:textSize="18sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <!-- 分类 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="无"
            android:textSize="18sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <!-- 标签 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tagsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="无标签"
            android:textSize="18sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <!-- 是否完成 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/isfinished"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/isCompletedTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="未完成"
            android:textSize="18sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <!-- 修改任务按钮，点击跳转到EditTaskActivity -->
    <Button
        android:id="@+id/editTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_task"
        android:layout_margin="16dp"
        android:backgroundTint="#0066ff" />

    <!-- 删除任务按钮，点击弹出MessageBox，选择确定则删除 -->
    <Button
        android:id="@+id/deleteTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_task"
        android:layout_margin="16dp"
        android:backgroundTint="#ff6600" />

</LinearLayout>
