<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/tab1_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/furina"
            android:gravity="center"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/task_list_icon"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:text="@string/all_task_list"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/blue1"
            android:gravity="center"
            android:layout_marginEnd="100dp"/>

    </LinearLayout>

    <!-- 任务列表区域 -->
    <ListView
        android:id="@+id/taskListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"/>

    <!-- 新增任务按钮 -->
    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:layout_margin="16dp"
        android:backgroundTint="#0066ff" />

</LinearLayout>
